fix modal, hidden scrollbars

--- a/src/css/artist-detail-modal.css
+++ b/src/css/artist-detail-modal.css
@@ -28,6 +28,8 @@
   border-radius: 16px;
   background: #060307;
   overflow: auto;
+  scrollbar-width: none;
+  /* width: 100%; */
 
   @media screen and (min-width: 768px) {
     padding: 64px 24px;
@@ -139,9 +141,11 @@
   gap: 24px;
 } */
 
-.modal-first-mini-container {}
+.modal-first-mini-container {
+}
 
-.modal-second-mini-container {}
+.modal-second-mini-container {
+}
 
 .modal-basic-info-list {
   display: flex;
@@ -174,13 +178,15 @@
   color: #fff;
 }
 
-.modal-info-sex-li {}
+.modal-info-sex-li {
+}
 
 .modal-info-members-li {
   min-width: 146px;
 }
 
-.modal-info-country-li {}
+.modal-info-country-li {
+}
 
 .modal-info-bio {
   font-family: 'IBM Plex Sans', sans-serif;
@@ -198,7 +204,8 @@
   color: #fff;
 }
 
-.modal-info-genres-container {}
+.modal-info-genres-container {
+}
 
 .modal-info-genres-list {
   display: flex;
@@ -230,9 +237,13 @@
 
 .modal-table-li {
   background-color: #1e1c1f;
-  width: 100%;
+  /* width: 100%; */
   /* height: 634px; */
-  height: 100%;
+
+  /* height: 100%; */
+  overflow-y: auto;
+  scrollbar-width: none;
+  max-height: 564px;
   border-radius: 16px;
   padding: 14px 11px;
 
@@ -245,6 +256,10 @@
     width: calc((100% - 32px * 3) / 4);
   }
 }
+
+/* .modal-table-li::-webkit-scrollbar {
+  display: none;
+} */
 
 .artist-modal-album-title {
   font-weight: 600;
